# oracular

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dfx.json
.github/workflows/: build-test.yaml
contracts/: Ownable.sol
contracts/cache/: solidity-files-cache.json
contracts/core/: PriceFeed.sol
scripts/: build.sh  tests.sh
scripts/dfx/: deploy_functions.sh  deploy_local.sh  deploy_remote.sh
scripts/examples/: create_oracle_evm.sh  create_oracle_http.sh
solidity/: remappings.txt
solidity/src/: PriceFeed.sol
src/: canister.rs  constants.rs  context.rs  contract.rs  error.rs  eth_rpc.rs  gen.rs  http.rs  lib.rs  log.rs  main.rs  memory.rs  parser.rs  processor.rs  provider.rs  state.rs
src/state/: oracle_storage.rs  pair_storage.rs  settings.rs  signer.rs
tests/: ocular_it.rs
tests/context/: mod.rs  state_machine.rs
tests/oracular/: mod.rs
tests/utils/: error.rs  gen.rs  mod.rs  wasm.rs
