[package]
name = "oracular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = []

[dependencies]
candid = "0.9"
ethers-core = "2.0"
hex = "0.4"
log = "0.4"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.24", features = ["macros", "rt"] }
once_cell = "1"
url = "2"
async-trait = "0.1"
futures = "0.3"
slotmap = { version = "1.0", features = ["serde"] }
jsonrpc-core = "18.0"


# Bitifnity SDK
eth-signer = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "eth-signer", tag = "v0.5.x", features = [
    "ic_sign",
] }
did = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "did", tag = "v0.5.x" }


# Canister SDK
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", tag = "v0.8.x" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", tag = "v0.8.x" }
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.8.x" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", tag = "v0.8.x" }
ic-stable-structures = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-stable-structures", tag = "v0.8.x" }


[dev-dependencies]
ic-test-utils = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-test-utils", tag = "v0.8.x" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", tag = "v0.8.x", features = [
    "state-machine-tests-client",
] }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", tag = "v0.8.x", features = [
    "ic-test-state-machine",
] }

[build-dependencies]
ethers = { version = "2.0", features = ["solc-full", "ethers-solc"] }
anyhow = "1.0"

[profile.dev]
debug = true

# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
